<resources>
    <!-- General -->
    <string name="or">Or</string>
    <string name="ok">Ok</string>
    <string name="app_name">OneHabit</string>
    <string name="next">Next</string>
    <string name="sending">Sending...</string>
    <string name="got_it">Got it</string>
    <string name="summary">Summary</string>

    <!-- Login/register -->
    <string name="Google">Google</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="register">Register</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="check_your_mailbox">Check your mailbox!</string>
    <string name="check_your_mailbox_description">You will find an email with further steps to finish verification process.</string>
    <string name="check_email_verification">All done? Continue</string>
    <string name="didnt_received_anything">Didn\'t received anything?\nClick to resend</string>
    <string name="time_remaining_to_resend">Time remaining to resend again: %1$s seconds</string> <!--TODO: make quantity string-->
    <string name="click_here_to_retry">Click here to retry</string>
    <string name="almost_done">Almost done!</string>
    <string name="there_is_one_last_thing_we_want_to_ask_you">There is one last thing we want to ask you...</string>
    <string name="finish">Finish</string>
    <string name="username">Username</string>
    <string name="how_should_we_call_you">How should we call you?</string>
    <string name="forgot_password_description">We will send you and email with further steps to reset password.</string>
    <string name="email_sent">Email has been sent</string>
    <string name="email_sent_description">When you finish get back to the app and try login with your new password.</string>

    <!-- Main -->
    <string name="timeline">Timeline</string>
    <string name="today">Today</string>
    <string name="week">This week</string>
    <string name="profile">Profile</string>

    <!-- Timeline -->
    <string name="day_header">Day %1$s</string>
    <string name="edit">Edit</string>
    <string name="actions">Actions</string>
    <string name="when">When</string>
    <string name="confirm">Confirm</string>
    <string name="decline">Decline</string>

    <!-- Today -->
    <string name="today_quantity">%1$s of %2$s</string>
    <string name="today_quantity_remaining">Remaining: %1$s</string>
    <string name="today_quantity_exceeded">Overflow: %1$s</string>
    <string name="finished_items">Finished items</string>
    <string name="add">+ Add</string>

    <!-- Profile -->
    <string name="current_habit">Current Habit</string>
    <string name="habit_details">Habit details</string>
    <string name="all_habits">All Habits</string>
    <string name="add_new_habit">Add new Habit</string>
    <string name="profile_details">Profile details</string>
    <string name="change_email">Change e-mail</string>
    <string name="change_password">Change password</string>
    <string name="change_display_name">Change display name</string>
    <string name="notifications">Notifications</string>
    <string name="unread_notifications">Unread notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="settings">Settings</string>
    <string name="about_the_app">About the App</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="app_version_1_s">App version %1$s</string>

    <!-- Actions -->
    <string name="eat_param">Eat %1$s!</string>
    <string name="eat_opposite">You don\'t have to eat %1$s!</string>
    <string name="not_eat_param">Do not eat %1$s</string>
    <string name="not_eat_opposite">You can eat %1$s</string>
    <string name="train_param">Make %1$s</string>
    <string name="train_opposite">You don\t have to make %1$s</string>
    <string name="start_doing_param">Do %1$s</string>
    <string name="start_doing_opposite">You don\'t have to do %1$s</string>
    <string name="stop_doing_param">Do not do %1$s</string>
    <string name="stop_doing_opposite">You can do %1$s</string>
    <string name="no_reminders">No reminders set</string>
    <string name="add_action">Add action</string>
    <string name="action_input_hint">What do you want to do?</string>

    <!-- Handling habit changes -->
    <string name="select_habit_title">Select habit</string>
    <string name="select_habit_message">It seems like you don\'t have any habit active. Please, select one.</string>
    <string name="goal_details">Goal details</string>

    <!-- Create Habit -->
    <string name="create_habit">Create Habit</string>
    <string name="create">Create</string>
    <string name="eat">Eat</string>
    <string name="not_eat">Stop eating</string>
    <string name="train">Train</string>
    <string name="start_doing">Start doing</string>
    <string name="stop_doing">Stop doing</string>
    <string name="which_action_you_want_to_take">Which action you want to take?</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="subject">Subject</string>
    <string name="intensity">Intensity</string>
    <string name="base_intensity">Base intensity</string>
    <string name="frequency">Frequency</string>
    <string name="reminders">Reminders</string>
    <string name="reminders_param">Reminders %1$s</string>
    <string name="set_as_active_habit">Set as active Habit</string>
    <string name="intensity_factor">Intensity factor</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>

    <!-- Generate milestone -->
    <string name="prepare">Prepare</string>
    <string name="start">Start</string>
    <string name="adjust">Adjust</string>
    <string name="accept">Accept</string>
    <string name="let_s_do_it">Let\'s do it!</string>
    <string name="milestone_intro_message">Take on the next challenges! Every week you shorten the distance to reach your habit!</string>
    <string name="summary_message">Ensure the data is set correctly. After that click Next to proceed.</string>
    <string name="adjust_intensity_message">Adjust intensity for your next goal. Remember that it is not a race, it is marathon - if you feel you\'d like repeat previous Milestone then leave slider untouched.</string>
    <string name="generate">Generate</string>
    <string name="title">Title</string>
    <string name="accept_milestone_message">This is your new milestone! Feel free to add custom action or set reminders. You can also get back here via Timeline tab.</string>

    <!-- Habit details -->
    <string name="week_param">Week %1$s</string>
    <string name="set_as_current">Set as current</string>
    <string name="provide_email">Provide email</string>
    <string name="set_password">Set password</string>
    <string name="display_name">Display name</string>
    <string name="set_new_name_to_be_displayed">Set new name to be displayed.</string>
    <string name="provide_name">Provide name</string>
    <string name="set_new_email">Set new email.</string>
    <string name="confirm_old_password_and_display_the_new_one">Confirm old password and display the new one.</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="re_authenticate">Re-authenticate</string>
    <string name="in_order_to_proceed_with_change_please_re_authenticate">To verify this change we need to ask you to re-authenticate. After successful authentication you will be asked to login again.</string>
    <string name="desired_intensity">Desired intensity</string>
    <string name="habit_finished">Habit finished</string>
    <string name="finish_habit_message">Great Job! You made it to the end of your journey! In order to select the next habit click Finish button below. If you want to receive actions from the last step of this habit, then mark checkbox below.</string>
    <string name="use_this_habit_s_actions_in_the_new_habit">Use this Habit\'s Actions in the new Habit</string>
</resources>