<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/default_margin"
    android:paddingEnd="@dimen/default_margin"
    tools:context=".ui.intro.fill_data.FillUserDataActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/email_image"
        android:layout_width="@dimen/default_logo_large"
        android:layout_height="@dimen/default_logo_large"
        android:src="@drawable/ic_sending" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email_title"
        style="@style/OneHabit.TextAppearance.Primary.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sending" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email_subtitle"
        style="@style/OneHabit.TextAppearance.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:gravity="center"
        android:text="@string/check_your_mailbox_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resend_button"
        style="@style/OneHabit.Button.Secondary.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:gravity="center"
        android:text="@string/didnt_received_anything"
        android:visibility="gone" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loading_indicator"
        style="@style/OneHabit.LinearProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_margin_small"
        android:elevation="10dp"
        android:indeterminate="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retry_send_button"
        style="@style/OneHabit.Button.Primary.Text.Red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:gravity="center"
        android:text="@string/click_here_to_retry"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_email_received_button"
        style="@style/OneHabit.Button.Primary.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:gravity="center"
        android:text="@string/check_email_verification"
        android:visibility="gone" />

</LinearLayout>