<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/default_margin"
    android:paddingEnd="@dimen/default_margin"
    android:paddingBottom="@dimen/default_margin"
    tools:context=".ui.generate_milestone.finish_habit.FinishHabitFragment">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        android:text="@string/finish_habit_message"
        android:textAppearance="@style/OneHabit.TextAppearance.Primary" />

    <CheckBox
        android:id="@+id/activate_top_tier_habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_this_habit_s_actions_in_the_new_habit"
        android:textAppearance="@style/OneHabit.TextAppearance.Primary"
        android:textColor="@color/primary_black"
        android:visibility="gone"
        tools:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finish_button"
        style="@style/OneHabit.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:text="@string/finish" />

</LinearLayout>