<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/todayFragment">

    <fragment
        android:id="@+id/todayFragment"
        android:name="com.ghuljr.onehabit.ui.main.today.ActionsFragment"
        android:label="@string/today"
        tools:layout="@layout/fragment_today">
        <action
            android:id="@+id/action_todayFragment_to_settingsFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/slide_enter_right"
            app:exitAnim="@anim/slide_exit_left"
            app:popEnterAnim="@anim/slide_enter_left"
            app:popExitAnim="@anim/slide_exit_right" />
    </fragment>
    <fragment
        android:id="@+id/timelineFragment"
        android:name="com.ghuljr.onehabit.ui.main.timeline.TimelineFragment"
        android:label="@string/timeline"
        tools:layout="@layout/fragment_timeline">
        <action
            android:id="@+id/action_timelineFragment_to_todayFragment"
            app:destination="@id/todayFragment"
            app:enterAnim="@anim/slide_enter_right"
            app:exitAnim="@anim/slide_exit_left"
            app:popEnterAnim="@anim/slide_enter_left"
            app:popExitAnim="@anim/slide_exit_right" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.ghuljr.onehabit.ui.main.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>