<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_generate_milestone"
    app:startDestination="@id/milestoneIntroFragment">

    <fragment
        android:id="@+id/milestoneIntroFragment"
        android:name="com.ghuljr.onehabit.ui.generate_milestone.intro.MilestoneIntroFragment"
        android:label="@string/start"
        tools:layout="@layout/fragment_milestone_intro">
        <action
            android:id="@+id/toSummary"
            app:destination="@id/summarisePreviousMilestoneFragment"
            app:enterAnim="@anim/slide_enter_right"
            app:exitAnim="@anim/slide_exit_left"
            app:popEnterAnim="@anim/slide_enter_left"
            app:popExitAnim="@anim/slide_exit_right" />
        <action
            android:id="@+id/toGenerate"
            app:destination="@id/adjustIntensityFragment"
            app:enterAnim="@anim/slide_enter_right"
            app:exitAnim="@anim/slide_exit_left"
            app:popEnterAnim="@anim/slide_enter_left"
            app:popExitAnim="@anim/slide_exit_right" />
    </fragment>
    <fragment
        android:id="@+id/summarisePreviousMilestoneFragment"
        android:name="com.ghuljr.onehabit.ui.generate_milestone.summary.SummarisePreviousMilestoneFragment"
        android:label="@string/summary"
        tools:layout="@layout/fragment_summarise_previous_milestone">
        <action
            android:id="@+id/toGenerate"
            app:destination="@id/adjustIntensityFragment"
            app:enterAnim="@anim/slide_enter_right"
            app:exitAnim="@anim/slide_exit_left"
            app:popEnterAnim="@anim/slide_enter_left"
            app:popExitAnim="@anim/slide_exit_right" />
    </fragment>
    <fragment
        android:id="@+id/acceptGeneratedMilestoneFragment"
        android:name="com.ghuljr.onehabit.ui.generate_milestone.generated.AcceptGeneratedMilestoneFragment"
        android:label="@string/accept"
        tools:layout="@layout/fragment_accept_generated_milestone" />
    <fragment
        android:id="@+id/adjustIntensityFragment"
        android:name="com.ghuljr.onehabit.ui.generate_milestone.generate.AdjustIntensityFragment"
        android:label="@string/adjust"
        tools:layout="@layout/fragment_adjust_intensity">
        <action
            android:id="@+id/toAccept"
            app:destination="@id/acceptGeneratedMilestoneFragment"
            app:enterAnim="@anim/slide_enter_right"
            app:exitAnim="@anim/slide_exit_left"
            app:popEnterAnim="@anim/slide_enter_left"
            app:popExitAnim="@anim/slide_exit_right" />
    </fragment>
</navigation>