<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/default_margin"
    android:paddingEnd="@dimen/default_margin"
    tools:context=".ui.intro.fill_data.FillUserDataActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="@dimen/default_logo_large"
        android:layout_height="@dimen/default_logo_large"
        android:src="@drawable/ic_question" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/OneHabit.TextAppearance.Primary.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almost_done" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email_subtitle"
        style="@style/OneHabit.TextAppearance.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:gravity="center"
        android:text="@string/there_is_one_last_thing_we_want_to_ask_you" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        style="@style/OneHabit.Button.Primary.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:gravity="center"
        android:text="@string/next" />

</LinearLayout>