<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/default_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.generate_milestone.intro.MilestoneIntroFragment">


    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_finish"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/let_s_do_it"
        android:textAppearance="@style/OneHabit.TextAppearance.Primary.Title.Small"
        android:layout_marginTop="@dimen/default_margin_small"/>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/default_margin_small"
        android:text="@string/milestone_intro_message"
        android:layout_gravity="center"
        android:textAppearance="@style/OneHabit.TextAppearance.Primary"
        />
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        style="@style/OneHabit.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:drawableTint="@color/primary_white"
        app:iconPadding="-32dp"
        android:drawableEnd="@drawable/ic_arrow_next"
        android:text="@string/next" />

</LinearLayout>