<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create_habit.CreateHabitActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        style="@style/OneHabit.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/OneHabit.Toolbar"
            app:contentInsetStartWithNavigation="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/create_habit" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_margin">

            <com.ghuljr.onehabit_tools_android.widget.TextDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/subject"
                app:strokeWidth="@dimen/default_stroke_width_thin"
                app:textPadding="@dimen/default_margin" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/habit_action_container"
                style="@style/OneHabit.TextInputLayout.Underline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/which_action_you_want_to_take"
                android:visibility="gone"
                app:counterTextColor="@color/primary_black"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/habit_action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="text"
                    android:textAppearance="@style/OneHabit.TextAppearance.Primary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/habit_subject_container"
                style="@style/OneHabit.TextInputLayout.Underline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/what_do_you_want_to_do"
                android:visibility="gone"
                app:counterTextColor="@color/primary_black"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/habit_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_small"
                    android:inputType="text"
                    android:textAppearance="@style/OneHabit.TextAppearance.Primary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.ghuljr.onehabit_tools_android.widget.TextDivider
                android:id="@+id/intensity_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/intensity"
                android:visibility="gone"
                app:strokeWidth="@dimen/default_stroke_width_thin"
                app:textPadding="@dimen/default_margin"
                tools:visibility="visible" />


            <LinearLayout
                android:id="@+id/intensity_base_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_small"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/OneHabit.TextInputLayout.Underline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/base_intensity"
                    android:visibility="gone"
                    app:counterTextColor="@color/primary_black"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/base_intensity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_small"
                        android:inputType="number"
                        android:textAppearance="@style/OneHabit.TextAppearance.Primary" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/OneHabit.TextInputLayout.Underline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/frequency"
                    android:visibility="gone"
                    app:counterTextColor="@color/primary_black"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/frequency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_small"
                        android:clickable="true"
                        android:focusable="false"
                        android:inputType="number"
                        android:textAppearance="@style/OneHabit.TextAppearance.Primary" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/intensity_desired_container"
                style="@style/OneHabit.TextInputLayout.Underline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/base_intensity"
                android:visibility="gone"
                app:counterTextColor="@color/primary_black"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/desired_intensity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_small"
                    android:inputType="number"
                    android:textAppearance="@style/OneHabit.TextAppearance.Primary" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/intensity_factor_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_small"
                android:gravity="center"
                android:text="@string/intensity_factor"
                android:textAppearance="@style/OneHabit.TextAppearance.Primary.Bold"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.google.android.material.slider.Slider
                android:id="@+id/intensity_factor_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="10.0"
                android:valueTo="25.0"
                android:visibility="gone"
                app:labelBehavior="floating"
                app:trackColorActive="@color/primary_black"
                app:trackColorInactive="@color/primary_black_transparent"
                tools:value="15.0"
                tools:visibility="visible" />

            <com.ghuljr.onehabit_tools_android.widget.TextDivider
                android:id="@+id/finish_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/finish"
                android:visibility="gone"
                app:strokeWidth="@dimen/default_stroke_width_thin"
                app:textPadding="@dimen/default_margin"
                tools:visibility="visible" />

            <CheckBox
                android:id="@+id/make_active_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_as_active_habit"
                android:textAppearance="@style/OneHabit.TextAppearance.Primary"
                android:textColor="@color/primary_black"
                android:visibility="gone"
                tools:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_habit"
                style="@style/OneHabit.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading_indicator"
        style="@style/OneHabit.CircularLoadingIndicator.Small.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:indeterminate="true"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>